# cr-mkref

./: README.md  genrefdb.template.yaml  pyproject.toml
scripts/: make_custom_ref_mm10.sh
src/cr_mkref/: __init__.py  cli.py  create.py  gtf.py  tui.py
